--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-scikit-learn >= 1.2.2
-imbalanced-learn > 0.10.1
-numpy >= 1.23.5
-pandas < 2
-category_encoders==2.2.2
+scikit-learn == 1.2.2
+imbalanced-learn == 0.10.1
+numpy == 1.23.5
+pandas == 1.2.2
+category_encoders==2.6.2
